[gd_scene load_steps=12 format=2]

[ext_resource path="res://tests/rooms/@TestRoom.tscn" type="PackedScene" id=1]
[ext_resource path="res://tests/rooms/Bosses/@rose/BossRoseTestRoom.gd" type="Script" id=2]
[ext_resource path="res://nodes/Hero/Hero.tscn" type="PackedScene" id=3]
[ext_resource path="res://nodes/bounds/BoundingRectangle/BoundingRectangle.tscn" type="PackedScene" id=4]
[ext_resource path="res://nodes/Boss/Boss.tscn" type="PackedScene" id=5]
[ext_resource path="res://tests/rooms/Bosses/@rose/BossRosePhase1Handler.tscn" type="PackedScene" id=6]
[ext_resource path="res://types/BossPhaseSrc.gd" type="Script" id=7]
[ext_resource path="res://tests/rooms/Bosses/@rose/BossRosePhase2Handler.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48, 112 )

[sub_resource type="Resource" id=1]
script = ExtResource( 7 )
min_health_percent = 0.7
attack_patterns = [  ]
handler_scene = ExtResource( 6 )

[sub_resource type="Resource" id=2]
script = ExtResource( 7 )
min_health_percent = 0.35
attack_patterns = [  ]
handler_scene = ExtResource( 8 )

[node name="BossRoseTest" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CanvasLayer" parent="." index="0"]
editor/display_folded = false

[node name="BossControl" type="Control" parent="CanvasLayer" index="2"]
margin_right = 1024.0
margin_bottom = 592.0

[node name="Label2" type="Label" parent="CanvasLayer/BossControl" index="0"]
margin_left = 16.0
margin_top = 48.0
margin_right = 108.0
margin_bottom = 62.0
rect_scale = Vector2( 2, 2 )
text = "current phase:"

[node name="CurrentPhase" type="Label" parent="CanvasLayer/BossControl" index="1"]
modulate = Color( 0.133333, 0.890196, 0, 1 )
margin_left = 208.0
margin_top = 48.0
margin_right = 392.0
margin_bottom = 62.0
rect_scale = Vector2( 2, 2 )
text = "CurrentPhase"

[node name="Label3" type="Label" parent="CanvasLayer/BossControl" index="2"]
margin_left = 832.0
margin_top = 16.0
margin_right = 856.0
margin_bottom = 30.0
rect_scale = Vector2( 2, 2 )
text = "HP:"

[node name="HP" type="Label" parent="CanvasLayer/BossControl" index="3"]
modulate = Color( 1, 0.235294, 0.156863, 1 )
margin_left = 880.0
margin_top = 16.0
margin_right = 904.0
margin_bottom = 30.0
rect_scale = Vector2( 2, 2 )
text = "100"

[node name="Map" parent="." index="1"]
tile_data = PoolIntArray( 65536, 7, 0, 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 6, 0, 65543, 6, 0, 65544, 6, 0, 65545, 6, 0, 65546, 6, 0, 65547, 6, 0, 65548, 6, 0, 65549, 6, 0, 65550, 6, 0, 65551, 6, 0, 65552, 6, 0, 65553, 6, 0, 65554, 6, 0, 65555, 6, 0, 65556, 6, 0, 65557, 6, 0, 65558, 6, 0, 65559, 6, 0, 65560, 6, 0, 65561, 6, 0, 65562, 6, 0, 65563, 6, 0, 65564, 6, 0, 65565, 6, 0, 65566, 6, 0, 65567, 536870919, 0, 131072, 4, 0, 131103, 536870916, 0, 196608, 4, 0, 196639, 536870916, 0, 262144, 4, 0, 262175, 536870916, 0, 327680, 4, 0, 327711, 536870916, 0, 393216, 4, 0, 393247, 536870916, 0, 458752, 4, 0, 458783, 536870916, 0, 524288, 4, 0, 524319, 536870916, 0, 589824, 4, 0, 589855, 536870916, 0, 655360, 4, 0, 655391, 536870916, 0, 720896, 4, 0, 720927, 536870916, 0, 851958, 7, 0, 851959, 6, 0, 851960, 6, 0, 851961, 6, 0, 851962, 6, 0, 851963, 6, 0, 851964, 6, 0, 851965, 6, 0, 851966, 6, 0, 851967, 6, 0, 786432, 5, 0, 786463, 536870916, 0, 917494, 4, 0, 851999, 536870916, 0, 983030, 4, 0, 917535, 536870916, 0, 1048566, 4, 0, 983071, 536870916, 0, 1114102, 8, 0, 1114103, 1, 0, 1114104, 1, 0, 1114105, 1, 0, 1114106, 1, 0, 1114107, 1, 0, 1114108, 1, 0, 1114109, 1, 0, 1114110, 1, 0, 1114111, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 536870920, 0 )

[node name="Area2D" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( 80, 416 )
shape = SubResource( 3 )

[node name="Hero" parent="." index="3" instance=ExtResource( 3 )]
position = Vector2( -250, 470 )

[node name="BoundingRectangle" parent="." index="4" instance=ExtResource( 4 )]
visible = false
position = Vector2( 512, 256 )
pad_top = 0
pad_right = 0
pad_bot = 0
pad_left = 0

[node name="Boss" parent="." index="5" instance=ExtResource( 5 )]
position = Vector2( 896, 464 )
max_health = 100.0
phases = [ SubResource( 1 ), SubResource( 2 ) ]
facing = -1

[node name="BossHealthTimer" type="Timer" parent="." index="6"]
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="BossHealthTimer" to="." method="_on_BossHealthTimer_timeout"]
